// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgetPassword to match snapshot (failure) 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column min-vh-100 shifter-dashboard-login"
  >
    <div
      class="mt-4 mb-4 flex-grow-1 d-flex align-items-center justify-content-center"
    >
      <div
        class="mx-auto d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between login-column"
      >
        <div
          class="login px-4 py-4 rounded d-flex flex-column justify-content-center mx-3 error"
        >
          <form
            novalidate=""
          >
            <div
              class="mb-4 pb-2 login-header"
            >
              <div
                class="mb-4 text-center login-icon"
              >
                <img
                  alt="shifter"
                  height="46"
                  width="36"
                />
              </div>
              <h1
                class="mb-0 font-weight-bold text-center login-title"
              >
                Password Reset
              </h1>
              <div
                class="mt-4 pb-2 text-center enter-code"
              >
                If there is an account associated width this email or username, a password reset link will be sent.
              </div>
            </div>
            <div
              class="mb-4 p-0 border-0 d-flex c-alert alert alert-danger fade"
              role="alert"
            >
              <div
                class="alert-icon px-1 d-flex align-items-center"
              >
                <i
                  aria-hidden="true"
                >
                  <svg
                    class="d-block"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                    />
                  </svg>
                </i>
              </div>
              <div
                class="alert-body px-3 py-2 flex-grow-1"
              >
                <p
                  class="mb-0"
                >
                  We found some errors with your login info. Please correct these issues to continue
                </p>
              </div>
            </div>
            <div
              class="mb-4 form-group"
            >
              <label
                class="font-weight-bold"
                for="username"
              >
                Username or email
              </label>
              <div
                class="reverse-icon input-group"
              >
                <input
                  class="is-invalid form-control"
                  id="username"
                  placeholder="Username or email"
                  type="text"
                  value=""
                />
                <div
                  class="invalid-feedback"
                >
                  We don’t recognize that email
                </div>
                <div
                  class="input-group-append"
                >
                  <i
                    aria-hidden="true"
                  >
                    <svg
                      class="d-block"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
            </div>
            <button
              class="mt-4 btn-colored font-weight-bold btn btn-primary btn-block disabled"
              disabled=""
              type="submit"
            >
              Send Password Reset Lik
            </button>
            <div
              class="mt-4 py-3 font-weight-bold text-center back2login"
            >
              <a
                href="#"
                target="_blank"
              >
                Cancel
              </a>
            </div>
          </form>
        </div>
        <div
          class="login-information mt-4 mt-md-0 mx-3"
        >
          <div
            class="login-information-icon text-center"
          >
            <img
              alt="login information"
              height="141"
              width="153"
            />
          </div>
          <h2
            class="login-information-title mb-0 font-weight-bold text-center"
          >
            Faster Build Times
          </h2>
          <div
            class="login-information-description mt-4 text-center"
          >
            Customize Shifter settings for up to 70% faster build times.
          </div>
          <div
            class="login-information-anchor font-weight-bold text-center"
          >
            <a
              href="#"
              to="#"
            >
              Learn about Shifter Media CDN
            </a>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="common-footer d-flex justify-content-around align-items-center"
    >
      <div
        class="d-flex"
      />
      <p
        class="m-0 common-footer-copyright"
      >
        <small
          class="d-flex align-items-center justify-content-center"
        >
          ©2023 Shifter | A Product by 
          <a
            href="https://www.digitalcube.jp/"
            rel="nofollow noopener"
            title="DigitalCube"
          >
            <img
              alt="digitalcube"
              class="d-block"
              height="15"
              width="77"
            />
          </a>
        </small>
      </p>
      <div />
    </footer>
  </div>
</DocumentFragment>
`;

exports[`ForgetPassword to match snapshot (inprogress) 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column min-vh-100 shifter-dashboard-login"
  >
    <div
      class="mt-4 mb-4 flex-grow-1 d-flex align-items-center justify-content-center"
    >
      <div
        class="mx-auto d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between login-column"
      >
        <div
          class="login px-4 py-4 rounded d-flex flex-column justify-content-center mx-3 success"
        >
          <div
            class="mb-4 pb-2 login-header"
          >
            <div
              class="mx-auto mb-3 pt-2 d-flex align-items-center justify-content-center rounded-circle login-success-icon"
            >
              <i
                aria-hidden="true"
              >
                <svg
                  class="d-block"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                  />
                </svg>
              </i>
            </div>
            <h1
              class="pt-4 font-weight-bold text-center login-title"
            >
              Password reset email sent
            </h1>
            <div
              class="m-3 pb-2 text-center enter-code"
            >
              An email has been sent to
              <br />
              <b>
                u*******@email.com
              </b>
              <br />
              Follow the directions in the email to reset your password. 
            </div>
            <button
              class="mt-4 btn btn-colored btn-block font-weight-bold"
              type="submit"
            >
              Back to Login
            </button>
          </div>
        </div>
        <div
          class="login-information mt-4 mt-md-0 mx-3"
        >
          <div
            class="login-information-icon text-center"
          >
            <img
              alt="login information"
              height="141"
              width="153"
            />
          </div>
          <h2
            class="login-information-title mb-0 font-weight-bold text-center"
          >
            Faster Build Times
          </h2>
          <div
            class="login-information-description mt-4 text-center"
          >
            Customize Shifter settings for up to 70% faster build times.
          </div>
          <div
            class="login-information-anchor font-weight-bold text-center"
          >
            <a
              href="#"
              to="#"
            >
              Learn about Shifter Media CDN
            </a>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="common-footer d-flex justify-content-around align-items-center"
    >
      <div
        class="d-flex"
      />
      <p
        class="m-0 common-footer-copyright"
      >
        <small
          class="d-flex align-items-center justify-content-center"
        >
          ©2023 Shifter | A Product by 
          <a
            href="https://www.digitalcube.jp/"
            rel="nofollow noopener"
            title="DigitalCube"
          >
            <img
              alt="digitalcube"
              class="d-block"
              height="15"
              width="77"
            />
          </a>
        </small>
      </p>
      <div />
    </footer>
  </div>
</DocumentFragment>
`;

exports[`ForgetPassword to match snapshot(default) 1`] = `
<DocumentFragment>
  <div
    class="d-flex flex-column min-vh-100 shifter-dashboard-login"
  >
    <div
      class="mt-4 mb-4 flex-grow-1 d-flex align-items-center justify-content-center"
    >
      <div
        class="mx-auto d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-between login-column"
      >
        <div
          class="login px-4 py-4 rounded d-flex flex-column justify-content-center mx-3"
        >
          <form
            novalidate=""
          >
            <div
              class="mb-4 pb-2 login-header"
            >
              <div
                class="mb-4 text-center login-icon"
              >
                <img
                  alt="shifter"
                  height="46"
                  width="36"
                />
              </div>
              <h1
                class="mb-0 font-weight-bold text-center login-title"
              >
                Password Reset
              </h1>
              <div
                class="mt-4 pb-2 text-center enter-code"
              >
                If there is an account associated width this email or username, a password reset link will be sent.
              </div>
            </div>
            <div
              class="mb-4 form-group"
            >
              <label
                class="font-weight-bold"
                for="username"
              >
                Username or email
              </label>
              <div
                class="reverse-icon input-group"
              >
                <input
                  class="form-control"
                  id="username"
                  placeholder="Username or email"
                  type="text"
                  value=""
                />
                <div
                  class="input-group-append"
                >
                  <i
                    aria-hidden="true"
                  >
                    <svg
                      class="d-block"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
                      />
                    </svg>
                  </i>
                </div>
              </div>
            </div>
            <button
              class="mt-4 btn-colored font-weight-bold btn btn-primary btn-block disabled"
              disabled=""
              type="submit"
            >
              Send Password Reset Lik
            </button>
            <div
              class="mt-4 py-3 font-weight-bold text-center back2login"
            >
              <a
                href="#"
                target="_blank"
              >
                Cancel
              </a>
            </div>
          </form>
        </div>
        <div
          class="login-information mt-4 mt-md-0 mx-3"
        >
          <div
            class="login-information-icon text-center"
          >
            <img
              alt="login information"
              height="141"
              width="153"
            />
          </div>
          <h2
            class="login-information-title mb-0 font-weight-bold text-center"
          >
            Faster Build Times
          </h2>
          <div
            class="login-information-description mt-4 text-center"
          >
            Customize Shifter settings for up to 70% faster build times.
          </div>
          <div
            class="login-information-anchor font-weight-bold text-center"
          >
            <a
              href="#"
              to="#"
            >
              Learn about Shifter Media CDN
            </a>
          </div>
        </div>
      </div>
    </div>
    <footer
      class="common-footer d-flex justify-content-around align-items-center"
    >
      <div
        class="d-flex"
      />
      <p
        class="m-0 common-footer-copyright"
      >
        <small
          class="d-flex align-items-center justify-content-center"
        >
          ©2023 Shifter | A Product by 
          <a
            href="https://www.digitalcube.jp/"
            rel="nofollow noopener"
            title="DigitalCube"
          >
            <img
              alt="digitalcube"
              class="d-block"
              height="15"
              width="77"
            />
          </a>
        </small>
      </p>
      <div />
    </footer>
  </div>
</DocumentFragment>
`;
